@@ -638,8 +638,8 @@ DEATH`S_DOOR=PRAYER_DEATHS_DOOR
 PRAYER_DEATHS_DOOR=<ABILITY>\
 Usage    : PRAY "DEATHS DOOR" [TARGET NAME]\n\r\
 Example  : pray "deaths door" bob\n\r\
-The target of this prayer becomes protected from death.  Should death occur, the \
-target will be miraculously brought back to their recall room and restored to \
+The caster becomes protected from death.  Should death occur, the \
+caster will be miraculously brought back to their recall room and restored to \
 perfect health.
 
 PRAYER_DEMONICCONSUMPTION=PRAYER_DEMONIC_CONSUMPTION
@@ -1590,6 +1590,15 @@ PRAYER_PROTECTION_CURSES=<ABILITY>\
 Usage    : PRAY "PROTECTION CURSES"\n\r\
 Example  : pray "protection curses"\n\r\
 The caster gains a level of protection from curse magical attacks.
+
+PRAYER_PROTDEATH=PRAYER_PROTECTION_DEATH
+PROTECTION_FROM_DEATH=PRAYER_PROTECTION_DEATH
+PRAYER_PROTECTION_DEATH=<ABILITY>\
+Usage    : PRAY "PROTECTION DEATH" [TARGET]\n\r\
+Example  : pray "protection death" bob\n\r\
+The target gains a measure of protection from death.  It will give them a \
+possible chance (which increases with expertise) to, instead of dying, \
+be brought back to their recall room with all health restored.
 
 PRAYER_PROTDISEASE=PRAYER_PROTECTION_DISEASE
 PROTECTION_FROM_DISEASE=PRAYER_PROTECTION_DISEASE
